--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -7,7 +7,8 @@ pkgdir = $(datadir)/$(MODULE_ARCH)
 pkg_LTLIBRARIES = module.la
 module_la_SOURCES = \
 e_mod_main.h e_mod_main.c \
-e_mod_gauche.h e_mod_gauche.c
+e_mod_gauche.h e_mod_gauche.c \
+ew.h ew.c
 
 module_la_LIBADD = @E_LIBS@ @gauche_libs@
 module_la_LDFLAGS = -module -avoid-version
